Add documentation for 'interpolate' option for hash_behaviour.
Signed-off-by: David McBride <dwm37@cam.ac.uk>

--- a/examples/ansible.cfg
+++ b/examples/ansible.cfg
@@ -65,7 +65,7 @@ timeout = 10
 
 # if inventory variables overlap, does the higher precedence one win
 # or are hash values merged together?  The default is 'replace' but
-# this can also be set to 'merge'.
+# this can also be set to 'merge' or 'interpolate'.
 #hash_behaviour = replace
 
 # list any Jinja2 extensions to enable here:
